syntax = "proto3";

option csharp_namespace = "ExpertPaymentService";

package expert;

service ExpertService {
    rpc GetAppointments(GetAppointmentsRequest) returns (GetAppointmentsResponse);
    rpc UpdateAppointment(GetAppointmentsRequest) returns (UpdateResponse);
    rpc UpdateExpertAvailability(GetAppointmentsRequest) returns (UpdateResponse);
}   

message GetAppointmentsRequest {
    string appointmentId = 1;
    int32 status = 2;
}

message GetAppointmentsResponse {
    int32 amount = 1;
}

message UpdateResponse {
    bool isSucess = 1;
}